test/cases/bad/bad053.lat
// Invalid type

int main() {
    string s = "str";
    s++;
}
